Update several components

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,5 +1,12 @@
 @import _colors
 
+@font-face
+	font-family: 'Inclusive Sans Variable'
+	src: url('/fonts/InclusiveSans-VariableFont_wght.ttf') format('truetype')
+	font-style: normal
+	font-weight: 300 700
+
+
 html
 	width: 100%
 	height: 100%
@@ -8,10 +15,10 @@ body
 	width: 100%
 	height: 100%
 	background-color: $main-background
-	font-family: 'Hind Vadodara', sans-serif
+	font-family: 'Inclusive Sans Variable', sans-serif
 
 h1
-	font-family: 'Roboto Slab', serif
+	font-family: neue-haas-grotesk-display	, serif
 	margin-top: 0
 	color: $title-color
 
@@ -111,6 +118,27 @@ footer.page-footer
 	text-align: center
 	vertical-align: middle
 	z-index: 2
+	display: flex
+	align-items: center
+	justify-content: center
+	position: relative
+
+	&::after
+		content: ""
+		position: absolute
+		width: 0
+		height: 0
+		border-left: 15px solid transparent
+		border-right: 15px solid transparent
+		border-top: 20px solid currentColor // Triangle inherits dynamic color
+		top: 30% // Adjusts the triangle position downward
+		left: 50%
+		transform: translate(-50%, 0%) // Centering and slight downward adjustment
+		/* ICON COLORS */
+		@each $name, $color in $icon-colors
+			&.#{$name}
+				color: $color
+		
 
 	i
 		color: $timeline-icon-color
@@ -135,7 +163,7 @@ footer.page-footer
 			color: $timestamp-color
 
 	h2
-		font-family: 'Roboto Slab', serif
+		font-family: neue-haas-grotesk-display, serif
 		line-height: 110%
 		margin: 5px 0
 		-webkit-margin-before: 5px
