--- a/src/_includes/head.ejs
+++ b/src/_includes/head.ejs
@@ -6,11 +6,7 @@
 <meta name="author" content="<%= head.author %>" />
 <% } %>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link
-  href="https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600"
-  rel="stylesheet"
-  type="text/css"
-/>
+<link rel="stylesheet" href="https://use.typekit.net/fek3gut.css">
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
