--- a/src/css/_colors.sass
+++ b/src/css/_colors.sass
@@ -1,14 +1,14 @@
 // To add new icon colors, just add a new entry to this map and then use it in your content.js file!
-$icon-colors: ("green": #59bf51, "red": #bf413e, "grey":#999999)
+$icon-colors: ("green": #009736, "red": #EE2A35, "black":#000000, "azul-celeste": #87cefa)
 
 // Color tokens beginning with "dark-" are used in dark mode.
 /* Background colors ---------------------------*/
-$header-footer-background: #005289
+$header-footer-background: #009736
 $main-background: #e0e0e0
 $card-background: #ffffff
 $filterbar-background: #cccccc
 
-$dark-header-footer-background: #003356
+$dark-header-footer-background: #333333
 $dark-main-background: #222222
 $dark-card-background: #333333
 $dark-filterbar-background: #000000
