--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,12 +1,5 @@
 @import _colors
 
-@font-face
-	font-family: 'Inclusive Sans Variable'
-	src: url('/fonts/InclusiveSans-VariableFont_wght.ttf') format('truetype')
-	font-style: normal
-	font-weight: 300 700
-
-
 html
 	width: 100%
 	height: 100%
@@ -15,10 +8,10 @@ body
 	width: 100%
 	height: 100%
 	background-color: $main-background
-	font-family: 'Inclusive Sans Variable', sans-serif
+	font-family: system-ui, sans-serif
 
 h1
-	font-family: neue-haas-grotesk-display	, serif
+	font-family: system-ui, sans-serif
 	margin-top: 0
 	color: $title-color
 
@@ -138,7 +131,7 @@ footer.page-footer
 		@each $name, $color in $icon-colors
 			&.#{$name}
 				color: $color
-		
+
 
 	i
 		color: $timeline-icon-color
@@ -163,7 +156,7 @@ footer.page-footer
 			color: $timestamp-color
 
 	h2
-		font-family: neue-haas-grotesk-display, serif
+		font-family: system-ui, sans-serif
 		line-height: 110%
 		margin: 5px 0
 		-webkit-margin-before: 5px
