Add date handling

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -46,11 +46,11 @@
             <% } %>
           </div>
           <div class="timeline-description">
-            <span class="timestamp"
-              ><time datetime="<%- entry.datetime || entry.date %>"
-                ><%- utilities.humanizeDate(entry.datetime, entry.date) %></time
-              ></span
-            >
+            <span class="timestamp">
+  <time datetime="<%- entry.datetime || entry.date %>">
+    <%- utilities.humanizeDate(entry.datetime, entry.date, entry.endDatetime, entry.endDate) %>
+  </time>
+</span>
             <h2>
               <a id="<%= entry.id %>" href="#<%= entry.id %>"><i class="fas fa-link"></i></a><%-
               entry.title %>
